# crypto_sentiment_demo_app

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yml  docker-compose.gpu.yml  docker-compose.test.yml  docker-compose.yml  pre-commit_test_file.py  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: lint.yml  lint_tests.yml  publish_docker_images.yml
conf/: config.yaml  nginx.conf
conf/logger/: base.yaml
conf/model/: bert.yaml  tf_idf.yaml
crypto_sentiment_demo_app/: __init__.py  crawler.py  model_scorer.py  streamlit_app.py  utils.py
crypto_sentiment_demo_app/crawler/: Dockerfile  crawler.py  processor.py  requirements.txt
crypto_sentiment_demo_app/data_provider/: Dockerfile  api.py  db_connector.py  requirements.txt  schemas.py
crypto_sentiment_demo_app/database/: docker_postgres_init.sql  write_df_to_db.py  write_df_to_db.sh
crypto_sentiment_demo_app/frontend/: Dockerfile  README.md  package-lock.json  package.json  requirements.txt  streamlit_app.py
crypto_sentiment_demo_app/label_studio/: Dockerfile  command  create_task.py  data.py  label_studio.py  main.py  modify_tasks.sh  requirements.txt  sampler.py
crypto_sentiment_demo_app/mlflow_server/: Dockerfile  create_bucket.py  requirements.txt  start.sh
crypto_sentiment_demo_app/model_inference_api/: Dockerfile  __init__.py  api.py  environment.yml  inference.py  (+1 more)
data/: bitcoin_ticker_5rows.csv  crypro_rss_feeds.txt  crypto_rss_feeds.txt  crypto_rss_feeds_toy.txt
db_setup/: docker_pgadmin_servers.json  docker_postgres_init.sql
(+53 files in other folders)
